--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@
             <p><span id="output-name"></span> Khodamnya: <span class="khodam-name" id="khodam-name"></span></p>
         </div>
     </div>
+      <footer>
+        <p><b> &copy; 2024 Djaroephon</b></p>
+            <b><a href="https://www.instagram.com/djaroephon.1746/">Instagram</a></b>
+        </p>
+    </footer>
     <script src="main.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.0.18/dist/sweetalert2.min.js"></script>
 </body>
